2014-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* pl_PL.po: Updated Polish translation.  Thanks hakunamatata!

2014-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/output.py (TwitterFeedOutput._on_connect): Fixed an
	  error callback.

2014-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks alexnmoya!

2014-01-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py (UpdateWindow.__init__): Fixed an enchant spell
	  cheker dictionary problem.

2013-11-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fr_FR.po, pl_PL.po: Updated translation.

2013-10-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.1 release.

2013-10-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Fixed replying from notifications
	* profile.py (ProfilePane): Fixed URLs on profile.

2013-10-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Fixed icons on notifications under Gnome 3.8.

2013-10-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* pl_PL.po: Added new Polish translation.  Thanks hakunamatata!

2013-10-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!

2013-09-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fr_FR.po: Updated French translation.  Thanks madx!
	* twitter/tweetentry.py (TwitterEntities): Added support for
	  thumbnails for photos of instagram.

2013-09-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4 release.

2013-08-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.glade: Fixed sensitives of buttons on the preference.

2013-08-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fr_FR.po: Added new French translation.  Thanks madx!
	* updatewindow.py (UpdateWindow._get_all_mentions_from): Removed a
	  redundant space between screen names in multi @replies (issue #60).

2013-08-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py (FeedWebView.on_click_link): Removed a redundant